Parent to NewObject Added
For now Select a GameObject and click P, then select the future parent of the GameObject and press L

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -183,3 +183,58 @@ Pos=960,18
 Size=320,7680
 Collapsed=0
 
+[Window][City_building_022]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_016]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_023]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_014]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_032]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_031]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_037]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_036]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_007]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_024]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_010]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
