--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -110,6 +110,9 @@
     <ClInclude Include="ModuleResourceManager.h" />
     <ClInclude Include="ModuleSerialization.h" />
     <ClInclude Include="Parson\parson.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="ResourceMaterial.h" />
+    <ClInclude Include="ResourceMesh.h" />
     <ClInclude Include="sphereEngine.h" />
     <ClInclude Include="UIAbout.h" />
     <ClInclude Include="UIConfiguration.h" />
@@ -268,6 +271,9 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="Parson\parson.c" />
     <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="Resource.cpp" />
+    <ClCompile Include="ResourceMaterial.cpp" />
+    <ClCompile Include="ResourceMesh.cpp" />
     <ClCompile Include="sphereEngine.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="UIAbout.cpp" />
