deleting library on start

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -243,3 +243,13 @@ Pos=960,18
 Size=320,7680
 Collapsed=0
 
+[Window][Grandma1]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_035]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
