--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -49,13 +49,13 @@ Size=541,530
 Collapsed=0
 
 [Window][Inspector]
-Pos=406,18
-Size=135,7680
+Pos=960,18
+Size=320,7680
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=101,7680
+Size=240,7680
 Collapsed=0
 
 [Window][BakerHouse]
@@ -129,8 +129,8 @@ Size=320,100
 Collapsed=0
 
 [Window][Time Management]
-Pos=101,18
-Size=304,60
+Pos=240,18
+Size=720,60
 Collapsed=0
 
 [Window][Load Scene]
@@ -251,5 +251,10 @@ Collapsed=0
 [Window][City_building_035]
 Pos=960,18
 Size=320,7680
+Collapsed=0
+
+[Window][Assets]
+Pos=0,18
+Size=240,7680
 Collapsed=0
 
