--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -115,6 +115,7 @@
     <ClInclude Include="ResourceMesh.h" />
     <ClInclude Include="sphereEngine.h" />
     <ClInclude Include="UIAbout.h" />
+    <ClInclude Include="UIAssets.h" />
     <ClInclude Include="UIConfiguration.h" />
     <ClInclude Include="UIConsole.h" />
     <ClInclude Include="UIHierarchy.h" />
@@ -277,6 +278,7 @@
     <ClCompile Include="sphereEngine.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="UIAbout.cpp" />
+    <ClCompile Include="UIAssets.cpp" />
     <ClCompile Include="UIConfiguration.cpp" />
     <ClCompile Include="UIConsole.cpp" />
     <ClCompile Include="UIHierarchy.cpp" />
