window resources working

--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="UIHierarchy.h" />
     <ClInclude Include="UIInspector.h" />
     <ClInclude Include="UILoad.h" />
+    <ClInclude Include="UIResources.h" />
     <ClInclude Include="UISave.h" />
     <ClInclude Include="UITime.h" />
     <ClInclude Include="UIWindow.h" />
@@ -284,6 +285,7 @@
     <ClCompile Include="UIHierarchy.cpp" />
     <ClCompile Include="UIInspector.cpp" />
     <ClCompile Include="UILoad.cpp" />
+    <ClCompile Include="UIResources.cpp" />
     <ClCompile Include="UISave.cpp" />
     <ClCompile Include="UITime.cpp" />
     <ClCompile Include="UIWindow.cpp" />
