resource window done

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -49,13 +49,13 @@ Size=541,530
 Collapsed=0
 
 [Window][Inspector]
-Pos=1440,18
-Size=480,7627
+Pos=960,18
+Size=320,7680
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=360,7627
+Size=240,7680
 Collapsed=0
 
 [Window][BakerHouse]
@@ -129,8 +129,8 @@ Size=320,100
 Collapsed=0
 
 [Window][Time Management]
-Pos=360,18
-Size=1080,60
+Pos=240,18
+Size=720,60
 Collapsed=0
 
 [Window][Load Scene]
@@ -256,5 +256,10 @@ Collapsed=0
 [Window][Assets]
 Pos=236,700
 Size=360,100
+Collapsed=0
+
+[Window][Resources]
+Pos=960,18
+Size=320,7680
 Collapsed=0
 
