--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="Glew\include\wglew.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="GOAudioListener.h" />
     <ClInclude Include="GOAudioSource.h" />
     <ClInclude Include="GOCamera.h" />
     <ClInclude Include="GOComponent.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="cubeEngine.cpp" />
     <ClCompile Include="glmath.cpp" />
+    <ClCompile Include="GOAudioListener.cpp" />
     <ClCompile Include="GOAudioSource.cpp" />
     <ClCompile Include="GOCamera.cpp" />
     <ClCompile Include="GOComponent.cpp" />
