change volume through inspector works

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,2947
+Size=320,4462
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,2947
+Size=240,4462
 Collapsed=0
 
 [Window][BakerHouse]
@@ -266,5 +266,10 @@ Collapsed=0
 [Window][City_building_034]
 Pos=960,18
 Size=320,7680
+Collapsed=0
+
+[Window][Sound]
+Pos=960,18
+Size=320,4462
 Collapsed=0
 
