--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,4462
+Size=320,4020
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,4462
+Size=240,4020
 Collapsed=0
 
 [Window][BakerHouse]
@@ -270,6 +270,11 @@ Collapsed=0
 
 [Window][Sound]
 Pos=960,18
-Size=320,4462
+Size=320,4020
+Collapsed=0
+
+[Window][MyMovingSound]
+Pos=960,18
+Size=320,4020
 Collapsed=0
 
