--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,3030
+Size=320,4229
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,3030
+Size=240,4229
 Collapsed=0
 
 [Window][BakerHouse]
@@ -281,5 +281,10 @@ Collapsed=0
 [Window][MyListener]
 Pos=960,18
 Size=320,3030
+Collapsed=0
+
+[Window][Music and listener]
+Pos=960,18
+Size=320,4229
 Collapsed=0
 
