--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,4575
+Size=320,3869
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,4575
+Size=240,3869
 Collapsed=0
 
 [Window][BakerHouse]
@@ -291,5 +291,10 @@ Collapsed=0
 [Window][MovingMotorcycle]
 Pos=960,18
 Size=320,4575
+Collapsed=0
+
+[Window][Listener]
+Pos=960,18
+Size=320,3869
 Collapsed=0
 
