user can change reverb radius through inspector

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,4470
+Size=320,4319
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,4470
+Size=240,4319
 Collapsed=0
 
 [Window][BakerHouse]
@@ -300,6 +300,11 @@ Collapsed=0
 
 [Window][ReverbZone]
 Pos=960,18
-Size=320,4470
+Size=320,4319
+Collapsed=0
+
+[Window][Sphere]
+Pos=960,18
+Size=320,4319
 Collapsed=0
 
