--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=960,18
-Size=320,4319
+Size=320,3622
 Collapsed=0
 
 [Window][GameObjects Hierarchy]
 Pos=0,18
-Size=240,4319
+Size=240,3622
 Collapsed=0
 
 [Window][BakerHouse]
@@ -306,5 +306,10 @@ Collapsed=0
 [Window][Sphere]
 Pos=960,18
 Size=320,4319
+Collapsed=0
+
+[Window][Music]
+Pos=960,18
+Size=320,3622
 Collapsed=0
 
